# rpg-de-terminal

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  jogo.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-ci.yml
src/: aleatoriedade.py  armazenamento.py  atualizador.py  catalogos.py  chefes.py  combate.py  config.py  economia.py  entidades.py  erros.py  eventos.py  gerador_inimigos.py  gerador_itens.py  gerador_mapa.py  historias.py  inimigos.py  itens.py  mapa.py  personagem.py  personagem_utils.py  salas.py  tramas.py  ui.py  ui_base.py  ui_combate.py  ui_eventos.py  ui_helpers.py  ui_hud.py  ui_menu.py  ui_resumo.py  utils.py  version.py
src/data/: chefes.json  classes.json  eventos.json  historias_personagem.json  inimigos.json  itens.json  salas.json  tramas.json
src/estados/: __init__.py  combate.py  exploracao.py  inventario.py
tests/: test_aleatoriedade.py  test_armazenamento.py  test_atualizador.py  test_combate.py  test_dificuldade.py  test_economia.py  test_eventos.py  test_gerador_itens.py  test_integracao_run.py  test_jogo.py  test_moeda.py  test_salas.py  test_schema_dados.py  test_suite_v166.py  test_tramas.py
